lecture forms #form="ngForm"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<form>
-
-<input #el [(ngModel)]="title" (input)="onInputAction(el)">
+<form #form='ngForm' (ngSubmit)="submit(form)">
+  <input [(ngModel)]="user.name" name="name">
+  <input [(ngModel)]="user.age" name="age">
+  <button> send </button>
 </form>
+
