--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <form #form='ngForm' (ngSubmit)="submit(form)">
-  <input [(ngModel)]="user.name" name="name">
+  <div *ngIf="!form.controls.name?.valid" [class]="['error']" >Name must be 10 symbols at least</div>
+  <input [class.error]="!form.controls.name?.valid" [(ngModel)]="user.name" name="name" minlength="10">
   <input [(ngModel)]="user.age" name="age">
-  <button> send </button>
+  <button [disabled]="!form.controls.name.valid"> send </button>
 </form>
 
