--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
-<form #form='ngForm' (ngSubmit)="submit(form)">
-  <div *ngIf="!form.controls.name?.valid" [class]="['error']" >Name must be 10 symbols at least</div>
-  <input [class.error]="!form.controls.name?.valid" [(ngModel)]="user.name" name="name" minlength="10">
-  <input [(ngModel)]="user.age" name="age">
-  <button [disabled]="!form.controls.name.valid"> send </button>
-</form>
+<!--<form #form='ngForm' (ngSubmit)="submit(form)">-->
+<!--  <div *ngIf="!form.controls.name?.valid" [class]="['error']" >Name must be 10 symbols at least</div>-->
+<!--  <input [class.error]="!form.controls.name?.valid" [(ngModel)]="user.name" name="name" minlength="10">-->
+<!--  <input [(ngModel)]="user.age" name="age">-->
+<!--  <button [disabled]="!form.controls.name.valid"> send </button>-->
+<!--</form>-->
 
+<form [formGroup]="myForm" (ngSubmit)="fff(myForm)">
+  <label>
+    <input [formControl]="name" minlength="3">
+  </label>
+  <label>
+    <input [formControl]="age">
+  </label>
+  <button [disabled]="!myForm.valid">save</button>
+</form>
