--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,14 @@
 <!--  <button [disabled]="!form.controls.name.valid"> send </button>-->
 <!--</form>-->
 
-<form [formGroup]="myForm" (ngSubmit)="fff(myForm)">
-  <label>
-    <input [formControl]="name" minlength="3">
-  </label>
-  <label>
-    <input [formControl]="age">
-  </label>
-  <button [disabled]="!myForm.valid">save</button>
-</form>
+<!--<form [formGroup]="myForm" (ngSubmit)="fff(myForm)">-->
+<!--  <label>-->
+<!--    <input [formControl]="name" minlength="3">-->
+<!--  </label>-->
+<!--  <label>-->
+<!--    <input [formControl]="age">-->
+<!--  </label>-->
+<!--  <button [disabled]="!myForm.valid">save</button>-->
+<!--</form>-->
+
+<app-users-data></app-users-data>
